<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_creer_profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true">


    <ScrollView
        android:layout_width="393dp"
        android:layout_height="785dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_medicalink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/medicalink_title"
                    android:textColor="#000000"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_profil"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_medicalink"
                    app:srcCompat="@drawable/utilisateur" />

                <TextView
                    android:id="@+id/text_votre_profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/creer_profil_votre_profil"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_profil" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="@string/creer_profil_adresse_email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:scrollHorizontally="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_date_de_debut" />

                <RadioGroup
                    android:id="@+id/radio_group_statut"
                    android:layout_width="320dp"
                    android:layout_height="69dp"
                    app:layout_constraintStart_toStartOf="@+id/text_informations_personnelles"
                    app:layout_constraintTop_toBottomOf="@+id/text_statut">

                    <RadioButton
                        android:id="@+id/radio_button_professionnel"
                        android:layout_width="218dp"
                        android:layout_height="23dp"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/quicksand_semibold"

                        android:text="@string/creer_profil_professionnel_de_sante"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_button_utilisateur"
                        android:layout_width="123dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="11dp"
                        android:fontFamily="@font/quicksand_semibold"
                        android:text="@string/creer_profil_utilisateur"
                        android:textSize="14sp"

                        />
                </RadioGroup>

                <TextView
                    android:id="@+id/text_informations_personnelles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/creer_profil_informations_personnelles"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/input_nom"
                    app:layout_constraintTop_toBottomOf="@+id/radio_group_statut" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_creer_profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:alpha="0.3"
                    android:background="@drawable/rounded_blue_button_background"
                    android:enabled="false"
                    android:fontFamily="@font/quicksand_bold"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="15dp"
                    android:text="@string/bouton_creer_mon_profil"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_rgpd" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="Mot de passe (6 chiffres)"
                    android:inputType="numberPassword"
                    android:padding="15dp"
                    android:scrollHorizontally="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nom"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"

                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="@string/creer_profil_nom"
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:padding="15dp"
                    android:scrollHorizontally="false"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_informations_personnelles" />

                <TextView
                    android:id="@+id/text_statut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/creer_profil_statut"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/radio_group_statut"
                    app:layout_constraintTop_toBottomOf="@+id/text_votre_profil" />

                <CheckBox
                    android:id="@+id/checkbox_rgpd"
                    android:layout_width="350dp"
                    android:layout_height="51dp"

                    android:layout_marginTop="5dp"
                    android:text="@string/creer_profil_rgpd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/input_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_password" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_prenom"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="@string/creer_profil_prenom"
                    android:inputType="textNoSuggestions|textCapWords"
                    android:padding="15dp"
                    android:scrollHorizontally="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_nom" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_date_de_debut"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white_black_stroke_button_background"
                    android:clickable="true"
                    android:focusable="false"
                    android:fontFamily="@font/quicksand_semibold"
                    android:hint="@string/creer_profil_date_de_naissance"
                    android:inputType="date"
                    android:padding="15dp"
                    android:scrollHorizontally="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_prenom" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>