<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_item_recap"
        android:layout_width="411dp"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_connexion"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo_famille" />

        <TextView
            android:id="@+id/text_bienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/font_home"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="5"
            android:text="@string/bienvenue_sur_medicalink"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_connexion"
            app:layout_constraintStart_toStartOf="@+id/image_connexion" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_connexion"
        android:layout_width="250dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_green_home_button_background"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/creer_mon_profil"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_item_recap" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_changer_utilisateur"
        android:layout_width="250dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_white_border_white_home_button_background"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/changer_utilisateur"
        android:textAllCaps="false"
        android:textColor="#007362"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_connexion" />
</androidx.constraintlayout.widget.ConstraintLayout>
